old slurm/slurm-3435.out
clang++ -std=c++14 -stdlib=libc++ -O3 -ferror-limit=2 -Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-sign-conversion -Wno-exit-time-destructors -Wno-float-equal -Wno-global-constructors -Wno-missing-declarations -Wno-unused-parameter -Wno-padded -Wno-shadow -Wno-weak-vtables -Wno-missing-prototypes -Wno-unused-variable -ferror-limit=1 -Wno-deprecated -Wno-conversion -Wno-double-promotion -c src/direct_cuda_pattern.cc -o ./obj/direct_cuda_pattern.o -Iinclude -I/usr/local/cuda/include -I/usr/local/include -I/usr/include/c++/v1
src/direct_cuda_pattern.cc:21:4: error: expected '(' after 'if'
if 0
   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
2 errors generated.
Makefile:28: recipe for target 'direct_cuda_pattern' failed
make: *** [direct_cuda_pattern] Error 1
Steepest Descent terminate with total step 500

solution:
(0.96392899372678975123,0.0013364661800474950549)	
(0.0038727704825851252783,-0.00025865731346313394941)	
(0.0039057659647358353334,-4.7449768896120756345e-05)	
(0.0039266794360588328991,-3.1262495503244792092e-05)	
(-0.00083097245735482883934,-0.00040982334573272215109)	
(-0.00078718050979127924052,-0.00030425308894897458521)	
(0.0038482224335601505558,-0.00034274475920188172398)	
(-0.00087038922203816341313,-0.00036675736371165822917)	
(-0.00085787812322713396986,-0.00041351314940818982308)	
(-0.0037084271895353919726,-0.0018498941624842319461)	
(0.0015969431662566947999,-0.0013652427090502076718)	
(0.0020341268161647410757,-0.0014803281451792281703)	
(-0.0038198651619804229775,-0.0014305187358424884848)	
(0.0018602345428092657408,-0.0015716537223416627254)	
(0.0019209687847231947389,-0.0013160882018630607523)	
(-0.0038972855766884226085,-0.0013603360796680952216)	
(0.0019505853678239170636,-0.0013861617828578752173)	
(0.0018936099517558779761,-0.0015723621991767927891)	
(0.0088050929484043850143,0.0043077202476893275071)	
(0.0078205771199774277297,0.0038957383637165218966)	
(-0.0036893951191367753591,-0.0018218012545430490277)	
(0.0019802573358450874415,-0.0015404199588377868492)	
(0.0015555480248323596063,-0.0013624493608745608716)	
(0.0082002396816454360684,0.0039188489155605943023)	
(0.0091626292168161000556,0.0041074412509463859369)	


real	12m58.244s
user	8m20.892s
sys	3m39.248s
